# chipletSim

./: CMakeLists.txt  Makefile  README.md  analyze_comm.py  analyze_placement.py  gitignore  simulator  test_e3s  test_e3s.cpp  visualize.py
benchmarks/: benchmark_custom.hpp  benchmark_e3s.hpp  benchmark_mixed.hpp  benchmarks_original.hpp  benchmarks_parsec.hpp  benchmarks_splash2.hpp  parsec_benchmarks.json
benchmarks/e3s/: NOTES  README  auto-indust-cowls.fig  auto-indust-mocsyn.fig  auto-indust.html  consumer-cowls.fig  consumer.html  conv-link  conv-proc  gen-all-bench  link-db-cords  link-db-cowls  lspecs  misc-cords  misc-cowls  misc-mocsyn  networking.html  office-automation.html  proc-db-cords  proc-db-cowls  proc-db-mocsyn  proc-db-mocsyn-asic  pspecs  telecom.html
booksim2/src/: booksim_config.cpp  gitignore  injection.cpp  injection.hpp  traffic.cpp  traffic.hpp  trafficmanager.cpp  trafficmanager.hpp
include/: algorithms.hpp  chiplet.hpp  cluster.hpp  noc_model.hpp  output_writer.hpp  simulator.hpp  task.hpp  types.hpp
output/Blackscholes-64/: cluster_report.csv  comm_latency.csv  core_utilization.csv  event_log.csv  summary.json  task_placement.csv
output/Canneal-64/: cluster_report.csv  comm_latency.csv  core_utilization.csv  summary.json  task_placement.csv
output/E3S-AutoIndust/: cluster_report.csv  comm_latency.csv  core_utilization.csv  event_log.csv  summary.json  task_placement.csv
output/E3S-Consumer/: cluster_report.csv  comm_latency.csv  core_utilization.csv  event_log.csv  summary.json  (+1 more)
src/: main.cpp
tools/: gen_booksim_inputs.py
(+28 files in other folders)
